--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,19 @@
-/vendor/
-/node_modules/
-.env
-.env.*
-/public/storage
-/storage/*.key
-/database/*.sqlite
-/.idea/
-/*.log
-.DS_Store
+/.phpunit.cache
+/node_modules
+/public/build
 /public/hot
 /public/storage
-/storage/debugbar
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
 npm-debug.log
 yarn-error.log
-.phpunit.result.cache
-/storage/logs/*
-/storage/framework/cache/data/*
-/storage/framework/sessions/*
-/storage/framework/views/*
-/storage/framework/testing/*
-/bootstrap/cache/*
-!.gitignore
+/.fleet
+/.idea
+/.vscode
